@@ -10,6 +10,8 @@ Summary of important user-visible changes for nurbs 1.3.10:
 
  * inst/nrbbasisfun: fixed bug to return indices in the 1D case
 
+ * inst/basiskntins: added new function to compute subdivision coefficients
+
 Summary of important user-visible changes for nurbs 1.3.9:
 -------------------------------------------------------------------
 
